--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,4 @@
-
-
+[defaults]
 
 
 [galaxy]
@@ -7,4 +6,4 @@ server_list = published_repo
 
 [galaxy_server.published_repo]
 url=https://automationhub22-1.lab.local/api/galaxy/content/published/
-token=6c2a20456c65559df58bd7bb3091ea2c6d6a1c20
+token="token"
